fix firefox overflow grid

--- a/scss/01-tools/mixins/_grid.scss
+++ b/scss/01-tools/mixins/_grid.scss
@@ -16,7 +16,7 @@
   @include gutter($gutter, 'gap');
 
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(Min(100%, var(--min, #{$min-size})), 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(Min(100%, var(--min, #{$min-size})), minmax(0, 1fr)));
 }
 
 /// Output a css grid row with gutters
